modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/automount-service-account-token/rendered/test_samples/pods/001-001-disallowed-automount-true.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    labels:
        app: nginx
    name: nginx
    namespace: testns
spec:
    automountServiceAccountToken: true
    containers:
        - image: nginx
          name: nginx
          volumeMounts:
            - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
              name: serviceaccount-token
        - command:
            - sh
            - -c
            - sleep 3600
          image: busybox
          name: sidecar
    initContainers:
        - command:
            - sh
            - -c
            - echo init
          image: busybox
          name: init-bootstrap
          volumeMounts:
            - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
              name: serviceaccount-token
    volumes:
        - name: serviceaccount-token
          secret:
            secretName: default-token
