modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/automount-service-account-token/rendered/test_samples/pods/002-002-allowed-automount-false.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    labels:
        app: nginx
    name: nginx
    namespace: testns
spec:
    automountServiceAccountToken: false
    containers:
        - image: nginx
          name: nginx
          volumeMounts:
            - mountPath: /var/lib/nginx
              name: data
    volumes:
        - emptyDir: {}
          name: data
