modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/automount-service-account-token/rendered/test_samples/pods/003-003-allowed-automount-absent.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    labels:
        app: nginx
    name: nginx
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          volumeMounts:
            - mountPath: /etc/nginx
              name: config
    volumes:
        - configMap:
            name: nginx-config
          name: config
