modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/automount-service-account-token/rendered/test_samples/pods/006-006-allowed-ephemeral-container-mountpath.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    labels:
        app: nginx
    name: nginx-ephemeral
    namespace: testns
spec:
    automountServiceAccountToken: false
    containers:
        - image: nginx
          name: nginx
    ephemeralContainers:
        - command:
            - sh
            - -c
            - sleep 3600
          image: busybox
          name: debugger
          volumeMounts:
            - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
              name: serviceaccount-token
    volumes:
        - name: serviceaccount-token
          secret:
            secretName: default-token
