modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/automount-service-account-token/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-automount-service-account-token-pod
tests:
  - name: security-policy
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: 001-disallowed-automount-true
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/001-001-disallowed-automount-true.yaml
        assertions:
          - violations: "yes"
      - name: 002-allowed-automount-false
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/002-002-allowed-automount-false.yaml
        assertions:
          - violations: "no"
      - name: 003-allowed-automount-absent
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/003-003-allowed-automount-absent.yaml
        assertions:
          - violations: "no"
      - name: 004-disallowed-multi-container-mountpath
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/001-001-disallowed-automount-true.yaml
        assertions:
          - violations: "yes"
      - name: 005-disallowed-init-container-mountpath
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/001-001-disallowed-automount-true.yaml
        assertions:
          - violations: "yes"
      - name: 006-allowed-ephemeral-container-mountpath
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/006-006-allowed-ephemeral-container-mountpath.yaml
        assertions:
          - violations: "no"
